# AR

./: .gitignore  Planeamento copy.typ  Planeamento.typ  README.md  config.yaml  pyproject.toml
connect4_rl/: __init__.py  config.py
connect4_rl/core/: __init__.py  base.py
connect4_rl/envs/: __init__.py  connect_four.py
connect4_rl/experiments/: __init__.py  alphazero_curriculum.py  alphazero_training.py  checkpoints.py  competition.py  dqn_curriculum.py  dqn_curriculum_utils.py  dqn_training.py  evaluation.py  notebook_variants.py  ppo_curriculum.py  ppo_notebook_variants.py  ppo_training.py
connect4_rl/utils/: replay_memory.py  reward_shaping.py  seed_utils.py
curriculums/connect_four_dqn/: lesson1.yaml  lesson2.yaml  lesson3.yaml  lesson4.yaml
notebooks/: 01_baselines.ipynb  02_mcts.ipynb  03_dqn_self_play.ipynb  04_ppo_self_play.ipynb  05_alphazero_simplified.ipynb  06_model_comparison.ipynb  README.md
notebooks/alphazero/: 05_alphazero_simplified.ipynb  06_alphazero_best_model_showcase.ipynb  (+2 more)
scripts/: regenerate_ppo_notebooks.py  run_alphazero_curriculum.py  run_alphazero_self_play.py  run_alphazero_server_export.py  run_baseline_tournament.py  run_dqn_ablation.py  run_dqn_curriculum.py  run_dqn_self_play.py  run_final_tournament.py  run_ppo_ablation.py  run_ppo_curriculum.py  run_ppo_self_play.py  run_tournament_with_pretrained.py
tests/: aux.txt  test_alphazero.py  test_alphazero_curriculum.py  test_baselines.py  test_dqn.py  test_dqn_curriculum.py  test_environment.py  test_ppo_curriculum.py  test_ppo_training.py  test_reproducibility.py
(+92 files in other folders)
