[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "connect4-rl"
version = "0.1.0"
description = "Connect Four with self-play reinforcement learning and planning baselines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "torch",
]

[tool.setuptools.packages.find]
include = ["connect4_rl*"]
