[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "connect4-rl"
version = "0.1.0"
description = "Connect Four with self-play reinforcement learning and planning baselines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<2.0",
  "matplotlib>=3.7,<4.0",
  "torch>=2.0,<3.0",
  "PyYAML>=6.0,<7.0",
  "torchsummary",
]

[tool.setuptools.packages.find]
include = ["connect4_rl*"]
